# sunfish-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
analysis/: analyze.py
analysis/utils/: common.py  interface.py  synth.py
assets/skin_generator/: skin_generator.py
copy_from/: Cargo.toml
copy_from/src/: lib.rs
copy_from/tests/: derive_test.rs
copy_from_derive/: Cargo.toml
copy_from_derive/src/: lib.rs
sunfish-bench/: Cargo.toml
sunfish-bench/src/: main.rs
sunfish-core/: Cargo.toml  build.rs  build.sh  styling.ron
sunfish-core/src/: core.rs  lfo.rs  lib.rs  lib.rs~  plugin.rs  swarc.rs
sunfish-core/src/dsp/: biquad.rs  env.rs  filter.rs  freq_match.rs  interpolation.rs  interpolator.rs  interpolator2.rs  mod.rs  osc.rs  resonant_filter.rs  smoothing.rs  util.rs
sunfish-core/src/modulation/: mod.rs  target.rs
sunfish-core/src/params/: deltas.rs  fmt.rs  mod.rs  sync.rs  types.rs
sunfish-core/src/ui/: alignment.rs  buffer_memory.rs  buffers.rs  controls.rs  coords.rs  editor.rs  mod.rs  msg.rs  packed_shapes.rs  shader_sprite.frag  shape_util.rs  shapes.rs  sprites.rs  styling.rs  texture.rs  widgets.rs  window.rs
sunfish-core/src/ui/widgets/: knob.rs  mod.rs  panel.rs  spinner.rs  toggle.rs  vslider.rs
sunfish-core/src/util/: borrow_return.rs  enumerable.rs  errors.rs  mod.rs  note_freq.rs  test_utils.rs
sunfish-py/: .gitignore  Cargo.toml
sunfish-py/src/: lib.rs
sunfish-standalone/: Cargo.toml
sunfish-standalone/src/: main.rs
