[package]
name = "sunfish-core"
version = "0.1.0"
authors = ["Kunal Arya <me@example.com>"]
edition = "2018"

# Enable debug symbols in release build.
[profile.release]
debug = true

[dependencies]
lazy_static = "1.4.0"
log = "0.4.*"
num = "0.2.0"
num-traits = "0.2"
serde = { version = "1.0.60", features = ["serde_derive"] }
serde_json = { version = "1.0.59" }
vst = { git = "https://github.com/kunalarya/vst-unsafe-rs.git", branch = "main" }
