[package]
name = "sunfish-core"
version = "0.1.0"
authors = ["Kunal Arya <me@example.com>"]
edition = "2021"

[lib]
name = "sunfish"
crate-type = ["cdylib", "rlib"]

# Enable debug symbols in release build.
[profile.release]
debug = true

[dependencies]
anyhow = "1.0"
async-std = "1.6.5"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }        # { path = "../../baseview" }
bytemuck = { version = "1.4", features = ["derive"] }
copy_from = { path = "../copy_from" }
crossbeam = "0.8.1"
futures = { version = "0.3.5", default-features = false, features = ["std", "executor"] }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", rev = "ac7cf12" } # { path = "../../iced_baseview" }
iced_core = { version = "0.4.0" }                                                         # { path = "../../iced/core" }
iced_futures = { version = "0.3.0" }                                                      # { path = "../../iced/futures" }
iced_graphics = { version = "0.2.0" }                                                     # { path = "../../iced/graphics" }
iced_native = { version = "0.4.0" }                                                       # { path = "../../iced/native" }
iced_wgpu = { version = "0.4.0" }                                                         # { path = "../../iced/wgpu" }
image = "0.23"
keyboard-types = { version = "0.5", default-features = false }
lazy_static = "1.4.0"
log = "0.4.*"
lyon = { git = "https://github.com/nical/lyon.git", rev = "6bf3599c" }
num = "0.2.0"
num-traits = "0.2"
raw-window-handle = { version = "0.3" }
ron = "^0.6.4"
serde = { version = "1.0.60", features = ["serde_derive"] }
serde_json = { version = "1.0.59" }
simplelog = "0.5.*"
twox-hash = { version = "1.0" }
vst = { git = "https://github.com/kunalarya/vst-unsafe-rs.git", branch = "main" }
wgpu_glyph = "0.11"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.6"

[dev-dependencies]
approx = "0.3.2"
